--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,5 +1,5 @@
 
-name: Android Pull Request & Master CI
+name: Musiko CI
 
 on:
   pull_request:
@@ -10,19 +10,6 @@ on:
       - 'master'
 
 jobs:
-  test:
-    name: Run Unit Tests
-    runs-on: ubuntu-18.04
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Unit tests
-        run: bash ./gradlew test --stacktrace
-
   apk:
     name: Generate APK
     runs-on: ubuntu-18.04
