--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,9 +5,11 @@ on:
   pull_request:
     branches:
       - 'master'
+      - 'developer'
   push:
     branches:
       - 'master'
+      - 'developer'
 
 jobs:
   apk:
